# klasifikasi_rumahadat

./: .gitignore  MobileNetV2.ipynb  README.md  app.py  cnn.ipynb  cnn_rumah_adat.h5  efficientnet.ipynb  efficientnet_rumah_adat.h5  mobilenetv2_rumah_adat.h5  pyproject.toml
