[project]
name = "Tugas1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Agil", email = "aptanaagil@gmail.com"},
]
dependencies = ["streamlit==1.37.0", "tensorflow>=2.20.0", "scikit-learn>=1.8.0", "joblib>=1.5.3"]
requires-python = "==3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
